# gore-and-ash-demo

./: .travis.yml  CHANGELOG.md  README.md  gore-and-ash-demo.cabal  gore-and-ash-demo.sublime-project  stack.yaml
src/client/: Game.hs  Graphics.hs  Main.hs
src/client/Game/: Camera.hs  Monad.hs
src/client/Game/Client/: Bullet.hs  Player.hs
src/client/Graphics/: Bullet.hs  Square.hs
src/server/: Game.hs  Main.hs
src/server/Game/: Monad.hs  Player.hs
src/server/Game/Server/: Bullet.hs  Player.hs
src/shared/: Store.hs
src/shared/Game/: Bullet.hs  Global.hs  Player.hs
