name:                gore-and-ash-demo
version:             2.0.0.0
synopsis:            Demonstration game for Gore&Ash game engine
description:         Please see README.md
homepage:            https://github.com/Teaspot-Studio/gore-and-ash-demo
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2015-2016 Anton Gushcha
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  README.md
  CHANGELOG.md
  stack.yaml

executable gore-and-ash-demo-client
  hs-source-dirs:
    src/client
    src/shared
  main-is:             Main.hs
  default-language:    Haskell2010

  other-modules:
    Consts
    FPS
    Game
    Game.Bullet
    Game.Bullet.Data
    Game.Bullet.Shared
    Game.Camera
    Game.Core
    Game.Data
    Game.Player
    Game.Player.Data
    Game.Player.Shared
    Game.Shared
    Graphics.Bullet
    Graphics.Square

  build-depends:
      base                              >= 4.7      && < 5
    , bytestring                        >= 0.10     && < 0.11
    , containers                        >= 0.5      && < 0.6
    , deepseq                           >= 1.4      && < 1.5
    , exceptions                        >= 0.8      && < 0.9
    , gore-and-ash                      >= 2.0      && < 2.1
    , gore-and-ash-logging              >= 3.0      && < 3.1
    , gore-and-ash-network              >= 2.0      && < 2.1
    , gore-and-ash-sdl                  >= 3.0      && < 3.1
    , gore-and-ash-sync                 >= 2.0      && < 2.1
    , lens                              >= 4.14     && < 4.15
    , linear                            >= 1.20     && < 1.21
    , network                           >= 2.6      && < 2.7
    , OpenGL                            >= 3.0      && < 3.1
    , sdl2                              >= 2.1      && < 2.2
    , text                              >= 1.2      && < 1.3
    , transformers                      >= 0.5      && < 0.6
    , unordered-containers              >= 0.2      && < 0.3
    , vector                            >= 0.11     && < 0.12

  default-extensions:
    DataKinds
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    OverloadedStrings
    RankNTypes
    RecordWildCards
    TypeFamilies

  ghc-options: -Wall -threaded

executable gore-and-ash-demo-server
  hs-source-dirs:
    src/server
    src/shared
  main-is:             Main.hs
  default-language:    Haskell2010

  other-modules:
    FPS
    Game
    Game.Bullet
    Game.Bullet.Data
    Game.Bullet.Shared
    Game.Core
    Game.Data
    Game.Player
    Game.Player.Data
    Game.Player.Shared
    Game.Shared

  build-depends:
      base                          >= 4.7          && < 5
    , bytestring                    >= 0.10         && < 0.11
    , containers                    >= 0.5          && < 0.6
    , deepseq                       >= 1.4          && < 1.5
    , exceptions                    >= 0.8          && < 0.9
    , gore-and-ash                  >= 2.0          && < 2.1
    , gore-and-ash-logging          >= 3.0          && < 3.1
    , gore-and-ash-network          >= 2.0          && < 2.1
    , gore-and-ash-sync             >= 2.0          && < 2.1
    , hashable                      >= 1.2          && < 1.3
    , lens                          >= 4.14         && < 4.15
    , linear                        >= 1.20         && < 1.21
    , network                       >= 2.6          && < 2.7
    , text                          >= 1.2          && < 1.3
    , time                          >= 1.6          && < 1.7
    , transformers                  >= 0.5          && < 0.6
    , unordered-containers          >= 0.2          && < 0.3

  default-extensions:
    DataKinds
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeFamilies

  ghc-options: -Wall -threaded
