name:                gore-and-ash-demo
version:             2.1.0.0
synopsis:            Demonstration game for Gore&Ash game engine
description:         Please see README.md
homepage:            https://github.com/Teaspot-Studio/gore-and-ash-demo
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2015-2017 Anton Gushcha
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  README.md
  CHANGELOG.md
  stack.yaml
data-files:
  media/AnonymousPro-Regular.ttf

executable gore-and-ash-demo-client
  hs-source-dirs:
    src/client
    src/shared
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:
    Game
    Game.Bullet
    Game.Camera
    Game.Client.Bullet
    Game.Client.Player
    Game.Global
    Game.Monad
    Game.Player
    Graphics
    Graphics.Bullet
    Graphics.Square
    Paths_gore_and_ash_demo
    Store

  build-depends:
      base                              >= 4.7      && < 5
    , bytestring                        >= 0.10     && < 0.11
    , containers                        >= 0.5      && < 0.6
    , deepseq                           >= 1.4      && < 1.5
    , exceptions                        >= 0.8      && < 0.9
    , gore-and-ash                      >= 2.0      && < 2.1
    , gore-and-ash-logging              >= 3.0      && < 3.1
    , gore-and-ash-network              >= 2.0      && < 2.1
    , gore-and-ash-sdl                  >= 3.0      && < 3.2
    , gore-and-ash-sync                 >= 2.0      && < 2.1
    , lens                              >= 4.14     && < 4.17
    , linear                            >= 1.20     && < 1.21
    , monad-control                     >= 1.0      && < 1.1
    , mtl                               >= 2.2      && < 2.3
    , network                           >= 2.6      && < 2.7
    , OpenGL                            >= 3.0      && < 3.1
    , optparse-applicative              >= 0.12     && < 0.15
    , sdl2                              >= 2.1      && < 2.5
    , sdl2-ttf                          >= 1.0      && < 2.2
    , store                             >= 0.2      && < 0.5
    , text                              >= 1.2      && < 1.3
    , transformers                      >= 0.5      && < 0.6
    , unordered-containers              >= 0.2      && < 0.3
    , vector                            >= 0.11     && < 0.13

  default-extensions:
    ConstraintKinds
    DataKinds
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    RankNTypes
    RecordWildCards
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    TypeFamilies
    UndecidableInstances

  ghc-options: -Wall -threaded
  -- ghc-options: -Wall -threaded -prof -auto-all -rtsopts

executable gore-and-ash-demo-server
  hs-source-dirs:
    src/server
    src/shared
  main-is:             Main.hs
  default-language:    Haskell2010

  other-modules:
    Game
    Game.Bullet
    Game.Global
    Game.Monad
    Game.Player
    Game.Server.Bullet
    Game.Server.Player
    Store

  build-depends:
      base                          >= 4.7          && < 5
    , bytestring                    >= 0.10         && < 0.11
    , containers                    >= 0.5.8        && < 0.6
    , deepseq                       >= 1.4          && < 1.5
    , exceptions                    >= 0.8          && < 0.9
    , gore-and-ash                  >= 2.0          && < 2.1
    , gore-and-ash-logging          >= 3.0          && < 3.1
    , gore-and-ash-network          >= 2.0          && < 2.1
    , gore-and-ash-sync             >= 2.0          && < 2.1
    , hashable                      >= 1.2          && < 1.3
    , lens                          >= 4.14         && < 4.17
    , linear                        >= 1.20         && < 1.21
    , monad-control                 >= 1.0          && < 1.1
    , mtl                           >= 2.2          && < 2.3
    , network                       >= 2.6          && < 2.7
    , optparse-applicative          >= 0.12         && < 0.16
    , store                         >= 0.2          && < 0.5
    , text                          >= 1.2          && < 1.3
    , these                         >= 0.7          && < 0.8
    , time                          >= 1.6          && < 1.9
    , transformers                  >= 0.5          && < 0.6
    , unordered-containers          >= 0.2          && < 0.3

  default-extensions:
    ConstraintKinds
    DataKinds
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    RankNTypes
    RecordWildCards
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    UndecidableInstances

  ghc-options: -Wall -threaded
